# pico-console-v2

./: .gitignore  README.md
doc/: diagram.drawio
pico_console_v2/: CMakeLists.txt
pico_console_v2/driver/: CMakeLists.txt
pico_console_v2/driver/ili9488_40_hstx/: Adafruit_GFX_E.cpp  Adafruit_GFX_E.hpp  CMakeLists.txt  font_16.h  glcdfont.h  ili9488_40_hstx.cpp  ili9488_40_hstx.hpp
pico_console_v2/driver/led_builtin/: CMakeLists.txt  led_builtin.c  led_builtin.h
pico_console_v2/driver/led_status/: CMakeLists.txt  led_status.cpp  led_status.hpp
pico_console_v2/driver/li_battery/: li_battery.cpp  li_battery.hpp
pico_console_v2/driver/system_time/: system_time.h
pico_console_v2/driver/temp_builtin/: CMakeLists.txt
pico_console_v2/driver/uart_bridge/: CMakeLists.txt  bridge_commands.h  uart_bridge.c  uart_bridge.h
pico_console_v2/driver/vibration_motor/: CMakeLists.txt
pico_console_v2/driver/xpt2046/: CMakeLists.txt  xpt2046.cpp  xpt2046.hpp
pico_console_v2/include/: hw_test.hpp
pico_console_v2/middleware/: CMakeLists.txt
pico_console_v2/middleware/audio_system/: CMakeLists.txt  audio_system.cpp  audio_system.hpp
pico_console_v2/middleware/gamepad/: CMakeLists.txt  gamepad.cpp  gamepad.hpp
pico_console_v2/middleware/ir_communication/: CMakeLists.txt
pico_console_v2/middleware/led_control/: CMakeLists.txt  led_control.cpp  led_control.hpp
pico_console_v2/middleware/sound_system/: CMakeLists.txt  sound_freq.h  sound_system.cpp  sound_system.hpp  sound_waves.h
pico_console_v2/middleware/temperature/: CMakeLists.txt  temperature.cpp  temperature.hpp
pico_console_v2/middleware/ui_system/: CMakeLists.txt
pico_console_v2/src/: hw_test_v2.cpp
pico_southbridge/: CMakeLists.txt
pico_southbridge/driver/: CMakeLists.txt
pico_southbridge/driver/btn_matrix/: CMakeLists.txt  btn_matrix.cpp  btn_matrix.hpp
pico_southbridge/driver/i2s_pcm/: CMakeLists.txt  i2s_pcm.c  i2s_pcm.h  sound_freq.c
pico_southbridge/driver/ir_remote/: ir_remote.cpp  ir_remote.hpp
pico_southbridge/driver/ir_tx_pio/: CMakeLists.txt  ir_tx_pio.c  ir_tx_pio.h
pico_southbridge/driver/joystick/: joystick.cpp  joystick.hpp
pico_southbridge/driver/li_battery/: CMakeLists.txt
pico_southbridge/driver/system_time/: CMakeLists.txt  system_time.c
pico_southbridge/driver/temp_builtin/: temp_builtin.c  temp_builtin.h
pico_southbridge/driver/uart_bridge/: bridge_commands.h  uart_bridge.c  uart_bridge.h
pico_southbridge/driver/uart_log/: uart_log.c  uart_log.h
pico_southbridge/driver/vibration_lra/: CMakeLists.txt  vibration_lra.cpp  vibration_lra.hpp
pico_southbridge/include/: southbridge.hpp
pico_southbridge/middleware/: CMakeLists.txt
pico_southbridge/middleware/audio_system/: CMakeLists.txt  audio_system.cpp  audio_system.hpp
pico_southbridge/middleware/gamepad/: CMakeLists.txt  gamepad.cpp  gamepad.hpp
pico_southbridge/middleware/ir_communication/: CMakeLists.txt
pico_southbridge/middleware/temperature/: temperature.cpp  temperature.hpp
pico_southbridge/middleware/vibration/: CMakeLists.txt
pico_southbridge/src/: southbridge.cpp
third_party_licenses/: Adafruit-ILI9340-MIT.txt  Interested-In-Spresense-ILI9488-MIT.txt  README.md  btstack-BSD-3-Clause-NonCommercial.txt
